<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/historicalInstructionDialog"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idrink_instructions"
        android:textColor="@color/white"
        android:textAlignment="gravity"
        style="@style/Heading2"
        android:background="@color/grayDarkBlue"
        android:padding="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historical_instruction_1"
        style="@style/Heading3"
        android:padding="30dp"
        android:textAlignment="gravity" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:src="@drawable/historical"
        android:contentDescription="@string/historical_instruction"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historical_instruction_2"
        style="@style/Heading3"
        android:padding="30dp"
        android:textAlignment="gravity" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historical_instruction_3"
        style="@style/Heading3"
        android:padding="30dp"
        android:textAlignment="gravity" />

    


</LinearLayout>