<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/measurementBtnInstructionDialog"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idrink_instructions"
        android:textColor="@color/white"
        android:textAlignment="gravity"
        style="@style/Heading2"
        android:background="@color/grayDarkBlue"
        android:padding="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measurement_button_instruction_1"
            android:layout_margin="20dp"
            android:textAlignment="textStart"
            android:padding="10dp"
            style="@style/Heading4"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/scan_button"
            android:src="@drawable/measurement_button_gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measurement_button_instruction_2"
            android:layout_margin="20dp"
            android:textAlignment="textStart"
            android:padding="10dp"
            style="@style/Heading4"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:contentDescription="@string/scan_button"
            android:src="@drawable/measurement_button_part_correct"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measurement_button_instruction_3"
            android:layout_margin="20dp"
            android:textAlignment="textStart"
            android:padding="10dp"
            style="@style/Heading4"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:contentDescription="@string/scan_button"
            android:src="@drawable/measurement_button_correct"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measurement_button_instruction_4"
            android:layout_margin="20dp"
            android:textAlignment="textStart"
            android:padding="10dp"
            style="@style/Heading4"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:contentDescription="@string/scan_button"
            android:src="@drawable/measurement_button_fail"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measurement_button_instruction_5"
            android:layout_margin="20dp"
            android:textAlignment="textStart"
            android:padding="10dp"
            style="@style/Heading4"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:contentDescription="@string/scan_button"
            android:src="@drawable/measurement_button_comment"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measurement_button_instruction_6"
            android:layout_margin="20dp"
            android:textAlignment="textStart"
            android:padding="10dp"
            style="@style/Heading4"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:contentDescription="@string/scan_button"
            android:src="@drawable/measurement_button_plus"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>


    </ScrollView>
    


</LinearLayout>
