<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/speedAidInstructionDialog"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idrink_instructions"
        android:textColor="@color/white"
        android:textAlignment="gravity"
        style="@style/Heading2"
        android:background="@color/grayDarkBlue"
        android:padding="20dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_scanner1"
            android:layout_margin="20dp"
            android:textAlignment="textStart"
            android:padding="10dp"
            style="@style/Heading3"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:contentDescription="@string/scan_button"
            android:src="@drawable/scan_button"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_title_1.2"
            android:layout_margin="20dp"
            android:textAlignment="textStart"
            android:padding="10dp"
            style="@style/Heading3"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:contentDescription="@string/scan_button"
            android:src="@drawable/menu_sensor_scanned"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wait_sync"
            android:layout_margin="20dp"
            android:textAlignment="textStart"
            android:padding="10dp"
            style="@style/Heading3"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:contentDescription="@string/scan_button"
            android:src="@drawable/menu_sensor_syncing"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_title_1.3"
            android:layout_margin="20dp"
            android:textAlignment="textStart"
            android:padding="10dp"
            style="@style/Heading3"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:contentDescription="@string/scan_button"
            android:src="@drawable/menu_sensor_connected"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanner_instruct_last"
            android:layout_margin="20dp"
            android:textAlignment="textStart"
            android:padding="10dp"
            style="@style/Heading3"/>


    </LinearLayout>
    </ScrollView>

</LinearLayout>