<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.llui.idrink.Activities.LoginActivity"
    style="@style/AppTheme"
    android:paddingTop="20dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sensor_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/item_sensor_small"/>
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/sensor_recycler_view_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.google.android.material.divider.MaterialDivider>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/measurementSessionInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/session_info"
            style="@style/Heading1"
            android:layout_marginBottom="10dp"/>
        <ImageButton
            android:id="@+id/helpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/measurementSessionInfo"
            android:layout_marginStart="20dp"
            android:src="@drawable/help_24px"
            android:contentDescription="@string/help"
            android:backgroundTint="@color/zxing_transparent" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drink_description"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        style="@style/Heading4" />


    <ListView
        android:id="@+id/measurementBtnWrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:orientation="vertical"
        tools:listitem="@layout/item_measurement_button">


    </ListView>

    <Button
        android:id="@+id/completeSessionBtn"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/end_session"
        android:backgroundTint="@color/lightBlue" />


</LinearLayout>