<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recordActivityView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.llui.idrink.Activities.RecordingActivity"
    style="@style/AppTheme"
    android:paddingTop="0dp"
    android:paddingHorizontal="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sensor_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/item_sensor_small"/>

        <!-- PreviewView -->
        <FrameLayout
            android:id="@+id/cameraLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#000000"
            android:layout_weight="1">

            <View
                android:id="@+id/redBorderView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"/>
            <androidx.camera.view.PreviewView
                android:id="@+id/previewView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp" />
            <!-- Video Preview -->
            <VideoView
                android:id="@+id/videoView"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

        </FrameLayout>
        <TextView
            android:id="@+id/selectPatientText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pleaseSelectPatient"
            style="@style/Heading3"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/data_recycler_view"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            tools:listitem="@layout/item_data"/>
        <TextView
            android:id="@+id/onePersonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onePersonOnVideo"
            style="@style/Heading4"
            android:textColor="@color/darkTurkish"
            android:layout_marginTop="10dp" />


        <!-- Chronometer -->
        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/grayDarkBlue"
            android:padding="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/angleChart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:background="#EEEEEE"
            android:padding="8dp"/>

        <!-- Record Button -->
        <Button
            android:id="@+id/recordButton"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:text="@string/start_recording"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp" />

    </LinearLayout>

    <CheckBox
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/hideDotData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hide_dot_data"
        style="@style/Heading5"
        android:layout_margin="30dp" />
    <RadioGroup
        android:id="@+id/viewOptionsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/radioCapturedVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/captured_video"
            style="@style/Heading5" />

        <RadioButton
            android:id="@+id/radioLivePreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_camera_preview"
            style="@style/Heading5" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:layout_alignParentBottom="true"
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingEnd="30dp"
        android:layout_margin="20dp"
        android:text="@string/back"
        app:icon="@drawable/keyboard_arrow_left_24px"
        app:iconGravity="start"
        app:iconPadding="0dp"
        tools:ignore="RtlSymmetry" />


</RelativeLayout>
