<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_marginEnd="20dp">

    <TextView
        android:id="@+id/sensor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name"
        android:layout_marginBottom="10dp"
        style="@style/Heading4"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/orientation_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orientation"
            android:layout_marginEnd="10dp"
            style="@style/Heading5" />

        <TextView
            android:id="@+id/orientation_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/free_acc_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_acc"
            android:layout_marginEnd="31dp"
            style="@style/Heading5" />

        <TextView
            android:id="@+id/free_acc_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp" />
    </LinearLayout>



</LinearLayout>